# NJFU--2.0

./: .gitignore  README.md  上传须知与教程
AIGC/: AIGC--心得.docx  AIGC--生成指令.docx  关于人工智能与新媒体融合发展的研究报告.docx
操作系统复习/: ~$  合   复  习   题.docx  操作系统复习题含答案.doc
数据库练习2025.5/: 1.《数据库原理MySQL》第一次上机作业.docx  2.《数据库原理MySQL》第二次上机作业.docx  3.《数据库原理MySQL》第三次上机作业.docx  4.2.1《数据库原理MySQL》第四次上机作业.docx  4.2《数据库原理MySQL》第四次上机作业.doc  4.《数据库原理MySQL》第四次上机作业.docx  jxgl.sql  《数据库原理MySQL》第一次上机作业.docx  《数据库原理MySQL》第三次上机作业.docx  《数据库原理MySQL》第二次上机作业.docx  《数据库原理MySQL》第四次上机作业.doc
数据库练习2025.5/作业（完成版）/: 1.《数据库原理MySQL》第一次上机作业.docx  2.《数据库原理MySQL》第二次上机作业.docx  3.《数据库原理MySQL》第三次上机作业.docx  4.《数据库原理MySQL》第四次上机作业.docx  5.《数据库原理MySQL》第五次上机作业.docx
数据库练习2025.5/参考数据库/: jxgl.sql
数据库练习2025.5/最终数据库文件/: jxgl.sql
数据结构/数据结构习题/: 习题ch01_answer.doc  习题ch02_answer.docx  习题ch03_answer.docx
数据结构/数据结构其他/: 2024.3.22数据结构第二次--2.1.cpp  2024.3.22数据结构第二次--2.2.cpp  9.4.2--9.4.3.pptx  c语言双向链表的创建及其插入和删除.cpp
机器视觉算法/小组作业/: M1.md  大纲.docx  (+5 more)
林木生物信息学/: 林木考试试题.pages
汇编语言/: 5.实习任务书.docx
离散数学复习/: 2023-2024-2离散数学试卷A卷.docx  第2次线下作业.docx  第3次线下作业.docx  第一次线下作业.docx
编译原理/实验一---词法分析器 - 副本/: CMakeLists.txt  GUI使用说明.md  GUI编译命令.txt  README.md  README.txt  compile.bat  compile.sh  lexer.h  main.cpp  main_simple.cpp  output.txt  program3.txt  run.bat  run_console.bat  run_console.ps1  run_gui.bat  start_lexer.bat  快速编译指南.txt  编译GUI应用.bat  编译命令.bat  编译指南.txt  编译步骤详细说明.md  运行词法分析器.bat  闪退问题解决方案.txt
英语国家留学/: 英语国家留学文书写作.docx
计算机网络与组网实习/: 4.《网络工程与组网实习》-指导书(1).docx  参考文献.md
音乐鉴赏论文/: 论文要求.docx  音乐鉴赏小组作业（2）.docx  音乐鉴赏课程论文.docx  音乐鉴赏课程论文封面.docx
(+122 files in other folders)
